Fixed intro alignment

--- a/src/sections/intro.scss
+++ b/src/sections/intro.scss
@@ -202,7 +202,7 @@ $negative-small-offset: -500vh;
 }
 #jamesS {
 	@extend .letter;
-	padding-right: $medium-offset;
+	padding-right: $small-offset;
 }
 
 #sterlingS {
